--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20230518.0",
     "typescript": "^5.1.6",
-    "wrangler": "2.3.0"
+    "wrangler": "^3.7.0"
   },
   "private": true,
   "scripts": {
     "start": "wrangler dev",
     "deploy": "wrangler publish"
+  },
+  "dependencies": {
+    "drizzle-orm": "^0.28.6"
   }
 }
