--- a/pages-svelte-frontend/package.json
+++ b/pages-svelte-frontend/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-cloudflare": "^2.3.3",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/lodash": "^4.14.198",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.14",
@@ -42,6 +43,7 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"drizzle-orm": "^0.28.6"
+		"drizzle-orm": "^0.28.6",
+		"lodash": "^4.17.21"
 	}
 }
